9 September 2009: Wouter
	- Fix bug where DNSSEC-bogus messages were marked with too high TTL.
	  The RRsets would still expire at the normal time, but this would
	  keep messages bogus in the cache for too long.
	- regression test for that bug.
	- documented that load_cache is meant for debugging.
	- increased MAXSYSLOGLEN so .bg key can be printed in debug output.

8 September 2009: Wouter
	- fixup printing errors when load_cache, they were printed to the
	  SSL connection which broke, now to the log.
	- new ldns - with fixed parse of large SOA values.

7 September 2009: Wouter
	- autotrust testbound scenarios.
	- autotrust fix that failure count is written to file.
	- autotrust fix that keys may become valid after add holddown time
	  alone, before the probe returns.

4 September 2009: Wouter
	- Changes to make unbound work with libevent-2.0.3 alpha. (in
	  configure detection due to new ssl dependency in libevent)
	- do not call sphinx for documentation when python is disabled.
	- remove EV_PERSIST from libevent timeout code to make the code
	  compatible with the libevent-2.0.  Works with older libevent too.
	- fix memory leak in python code.

3 September 2009: Wouter
	- Got a patch from Luca Bruno for libunbound support on windows to
	  pick up the system resolvconf nameservers and hosts there.
	- included ldns updated (enum warning fixed).
	- makefile fix for parallel makes.
	- Patch from Zdenek Vasicek and Attila Nagy for using the source IP
	  from python scripts.  See pythonmod/examples/resip.py.
	- doxygen comment fixes.

2 September 2009: Wouter
	- TRAFFIC keyword for testbound. Simplifies test generation.
	  ${range lower val upper} to check probe timeout values.
	- test with 5011-prepublish rollover and revocation.
	- fix revocation of RR for autotrust, stray exclamation mark.

1 September 2009: Wouter
	- testbound variable arithmetic.
	- autotrust probe time is randomised.
	- autotrust: the probe is active and does not fetch from cache.
