@@ -129,6 +129,10 @@ log_init(const char* filename, int use_syslog, const char* chrootdir)
 			strerror(errno));
 		return;
 	}
+#ifndef UB_ON_WINDOWS
+	/* line buffering does not work on windows */
+	setvbuf(f, NULL, _IOLBF, 0);
+#endif
 	logfile = f;
 }
 
@@ -217,7 +221,10 @@ log_vmsg(int pri, const char* type,
 #endif
 	fprintf(logfile, "[%u] %s[%d:%x] %s: %s\n", (unsigned)now, 
 		ident, (int)getpid(), tid?*tid:0, type, message);
+#ifdef UB_ON_WINDOWS
+	/* line buffering does not work on windows */
 	fflush(logfile);
+#endif
 }
 
 /**
